--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "zar-csdt",
+  "name": "xar-csdt",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "@material-ui/core": "^4.5.1",
     "@material-ui/icons": "^4.5.1",
     "@material-ui/styles": "^4.5.0",
-    "@zar-network/javascript-sdk": "^2.15.11",
+    "@xar-network/javascript-sdk": "^2.17.3",
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
     "react-redux": "^7.1.1",
