--- a/package.json
+++ b/package.json
@@ -6,8 +6,9 @@
     "@material-ui/core": "^4.5.1",
     "@material-ui/icons": "^4.5.1",
     "@material-ui/styles": "^4.5.0",
-    "@xar-network/javascript-sdk": "^2.17.8",
+    "@xar-network/javascript-sdk": "^2.17.9",
     "axios": "^0.19.0",
+    "moment": "^2.24.0",
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
     "react-redux": "^7.1.1",
