--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "@xar-network/javascript-sdk": "^2.17.9",
     "axios": "^0.19.0",
     "moment": "^2.24.0",
+    "qrcode.react": "^1.0.0",
     "react": "^16.11.0",
+    "react-copy-to-clipboard": "^5.0.2",
     "react-dom": "^16.11.0",
     "react-redux": "^7.1.1",
     "react-router-dom": "^5.1.2",
